--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
 # ===============================
 # DATABASE
 # ===============================
-#spring.datasource.url=jdbc:mysql://pma-01.camoo.net:3306/socipr3811_creperie?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.username=socipr3811_root
-#spring.datasource.password=SAy_Kd?fN3Sf
-spring.datasource.url=jdbc:mysql://localhost:3306/sesamedical?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://pma-01.camoo.net:3306/socipr3811_creperie?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=socipr3811_root
+spring.datasource.password=SAy_Kd?fN3Sf
+#spring.datasource.url=jdbc:mysql://localhost:3306/sesamedical?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format__sql=true
