--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,6 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format__sql=true
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # ===============================
 # JPA / HIBERNATE
 # ===============================
@@ -105,7 +106,7 @@ app.firebase-fcm-token-test=BK3M3C2ZA6XD-t9l-HTkK_N-Eb6FBSlJDtrgCnODbhX0rUweVuHZ
 # ===============================
 spring.activemq.user=admin
 spring.activemq.password=admin
-spring.activemq.broker-url=tcp://localhost:61616?jms.redeliveryPolicy.maximumRedeliveries=0
+spring.activemq.broker-url=tcp://162.19.230.158:61616?jms.redeliveryPolicy.maximumRedeliveries=0
 # ===============================
 # SMS PRESTA CONFIG
 # ===============================
@@ -117,9 +118,9 @@ app.sinch.api_token=0f23fd85ca5e48fbb9a3b96479d331bf
 app.cmtelecom.api_token=8EC1B489-6C35-4554-9F55-BC3E6CFC2F13
 app.cmtelecom.endpoint=smpp://smpp15.cm.nl:30000
 APP.CMTELECOM_WHATAPP_SENDER_NUMBER=+31762011571
-#presta mboadeals
-app.mboadeals.userId =61ec45c24d09b2e1b5003ead
-app.mboadeals.password =usHeR585
+#presta NEXAH
+app.mboadeals.userId =aldrinbambock@gmail.com
+app.mboadeals.password =NEXA1235
 # ===============================
 # MULTIPART
 # ===============================
