--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,6 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format__sql=true
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # ===============================
 # JPA / HIBERNATE
 # ===============================
@@ -108,7 +109,7 @@ app.firebase-fcm-token-test=BK3M3C2ZA6XD-t9l-HTkK_N-Eb6FBSlJDtrgCnODbhX0rUweVuHZ
 # ===============================
 spring.activemq.user=admin
 spring.activemq.password=admin
-spring.activemq.broker-url=tcp://localhost:61616?jms.redeliveryPolicy.maximumRedeliveries=0
+spring.activemq.broker-url=tcp://162.19.230.158:61616?jms.redeliveryPolicy.maximumRedeliveries=0
 # ===============================
 # SMS PRESTA CONFIG
 # ===============================
