--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -100,7 +100,7 @@ app.firebase-fcm-token-test=BK3M3C2ZA6XD-t9l-HTkK_N-Eb6FBSlJDtrgCnODbhX0rUweVuHZ
 # ===============================
 spring.activemq.user=admin
 spring.activemq.password=admin
-spring.activemq.broker-url=tcp://localhost:61616?jms.redeliveryPolicy.maximumRedeliveries=0
+spring.activemq.broker-url=tcp://162.19.230.158:61616?jms.redeliveryPolicy.maximumRedeliveries=0
 # ===============================
 # SMS PRESTA CONFIG
 # ===============================
